--- a/OOPDraw/OOPDraw.csproj
+++ b/OOPDraw/OOPDraw.csproj
@@ -55,6 +55,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
     <EmbeddedResource Include="OOPDraw.resx">
       <DependentUpon>OOPDraw.cs</DependentUpon>
     </EmbeddedResource>
